[tool.poetry]
name = "bert-ner-examples"
version = "0.1.0"
description = ""
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bert_ner_examples"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
transformers = "^4.25.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
